--- a/english-site/styles.css
+++ b/english-site/styles.css
@@ -199,6 +199,17 @@ p {
 }
 
 h3:not(:first-of-type)~p {
-    line-height: 1.6;
+    line-height: 1.5;
     margin-bottom: 1em;
+}
+
+h4 {
+    font-size: 1.05em;
+    font-weight: 600;
+    margin-top: 1.5em;
+    margin-bottom: 0.6em;
+}
+
+.blue{
+    color: #0066cc;
 }
